{{$NEXT}}

0.0.6  2021-02-23T05:54:04+13:00
    - Documentation link fixes for moved source project

0.0.5  2021-02-20T06:06:23+13:00
    - Moved source project pdf-raku -> harfbuzz-raku
    - Fix is-horizontal() and is-vertical() methods
    - Raise miminum HarfBuzz version to 2.6.6 #4

0.0.4  2021-02-16T13:28:36+13:00
    - Moved HarfBuzz::Shaper::Cairo and HarfBuzz::Font::FreeType
      from this distribution into seperate modules. This eliminates
      dependencies on Cairo and Font::FreeType modules.
    - Treating this module as experimental. It requires Debian
      11+ (buster) which is currently testing, for HarfBuzz v2.6.6+.

0.0.3  2021-02-06T06:50:03+13:00
    - Moved cairo-glyphs() method from HarfBuzz::Buffer to
      HarfBuzz::Shaper. Refactored to reprocess shape()
      glyphs. Solves sizing issues raised in #2

0.0.2  2021-01-29T11:29:41+13:00
    - Make $.buf() reshape if buffer or font has been updated

0.0.1 2020-12-25
    - Initial release